# UAV_Fiducial_Markers

./: CMakeCache.txt  CMakeLists.txt  Camera_Distortion_iPhone.txt  Camera_Matrix_iPhone.txt  Fiducial_Markers.vcxproj  Fiducial_Markers.vcxproj.filters  Jamroot.txt  Makefile  Pose_estimation_Aruco.py  README.md  TODO LIST.txt  VideoInsta.avi  alt1  alt1_cpp.cpp  alt1_py.py  aruco_Final.py  binarize.py  blabla.cpp  boost.cpp  c_cpp_properties.json  cmult.c  cppyy.py  ctypes_test.py  detect_aruco.py  drawing.py  hello.cpp  justtesting.cpp  main  main.cpp  main2.cpp  main3.cpp  main3.py  markerC_Final.py  markerC_Final2.py  markerC_Final3.py  markerC_new_measure.py  markerC_new_measure_testImages.py  markerC_new_measure_testImages_test.py  markerC_new_test.py  markerC_new_test_realtime.py  (+22 more)
camera_calibration-master/: camera_calibration.py  data_generation.py
camera_calibration-master-2/: camera_calibration.py
fast.ai/: lesson1.py
x64/Debug/: Fiducial_Markers.ilk  vc142.idb
x64/Release/: Fiducial_Markers.ilk
x64/Release/Fiducial_Markers.tlog/: CL.read.1.tlog
